<resources>
    <string name="app_name">College Course Tracker</string>
    <string name="emptyInput">Please fill out all the fields</string>
    <string name="add_button">add Button</string>
    <string name="term_title">Term title</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="create_term">CREATE TERM</string>
    <string name="course_name">Course name</string>
    <string name="instructor_name">Instructor name</string>
    <string name="instructor_phone">Instructor phone</string>
    <string name="instructor_email">Instructor email</string>
    <string name="create_course">CREATE COURSE</string>
    <string name="select">Select course status</string>
    <string name="assessment_title">Assessment title</string>
    <string name="create_assessment">CREATE ASSESSMENT</string>
    <string name="get_started">Get Started</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="all_terms">View All Terms</string>
    <string name="all_courses">View All Courses</string>
    <string name="all_assessments">View All Assessments</string>
    <string name="update_term">UPDATE TERM</string>
    <string name="update_course">UPDATE COURSE</string>
    <string name="update_assessment">UPDATE ASSESSMENT</string>
    <string name="term_title_text">Term Title</string>
    <string name="term_start_date">Term Start Date</string>
    <string name="term_end_date">Term End Date</string>
    <string name="course_title">Course Title</string>
    <string name="course_end_date">Course End Date</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_status">Course Status:</string>
    <string name="instructor_name_txt">Instructor Name</string>
    <string name="instructor_phone_txt">Instructor Phone</string>
    <string name="instructor_email_txt">Instructor Email</string>
    <string name="assessment_title_txt">Assessment Title</string>
    <string name="assessment_type_txt">Assessment Type:</string>
    <string name="start_date_txt">Start Date</string>
    <string name="end_date_txt">End Date</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="dialog_message">"Please delete corresponding courses before deleting this term."</string>
    <string name="dialog_title">Found Courses!</string>
    <string name="optional_notes">Optional note</string>
    <string name="share">Share</string>
    <string name="channel_name">Channel 1</string>
    <string name="channel_description">Date receiver channel</string>
    <string name="start_time">Start time</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="cancel_timer">Cancel Timer</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="cancel_alarm">Cancel Alarm</string>
    <string name="set_reminder">set reminder</string>
    <string name="starts_on">Starts on:</string>
    <string name="ends_on">Ends on:</string>
    <string name="time_">Time:</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="starts_at">Starts at:</string>
    <string name="room_number_or_course_number">Room number or Course Number</string>
    <string name="end_time">End Time</string>
    <string name="room">Room #</string>
    <string name="note_to_set">Note to set</string>
    <string name="enter_course_note">Enter course note</string>
    <string name="create_note">CREATE NOTE</string>
    <string name="update_note">UPDATE NOTE</string>
    <string name="welcome">Welcome,</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in_to_continue">Sign in to continue!</string>
    <string name="log_in_caps">LOG IN</string>
    <string name="create_an_account">Create an account,</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sing_up_to_get_started">Sign up to get started!</string>
    <string name="search">search</string>
    <string name="view_notes">View Notes</string>
    <string name="need_an_account">Need an account,</string>
    <string name="label">label</string>
    <string name="username">UserName</string>
    <string name="error_string">Field must not be empty.</string>
    <string name="sign_up_lowercase">Sign Up</string>
    <string name="room_course_number">Room/Course number</string>
    <string name="room_number">Room number</string>
    <string name="select_course_status">Select course status</string>
    <string name="select_test_type">Select test type</string>
    <string name="select_assessment_type">Select assessment type</string>
    <string name="term_name">Term name</string>
    <string name="assessment_name">Assessment name</string>
    <string name="name">Name:</string>
    <string name="phone">Phone:</string>
    <string name="email">Email:</string>
    <string name="instructor_information">Instructor Information</string>
    <string name="view_instructor">view instructor</string>
    <string name="view_assessments_by_type">View assessments by type</string>
    <string name="view_assessments_by_type_or_search_by_title_above">View assessments by type, or search by title above</string>
    <string name="reports">Reports</string>


    <string-array name="course_status">
        <item>In progress</item>
        <item>Completed</item>
        <item>Dropped</item>
        <item>Plan to take</item>
    </string-array>

    <string-array name="assessment_type">
        <item>Select assessment type</item>
        <item>Performance</item>
        <item>Objective</item>
    </string-array>

    <string-array name="test_type">
        <item>Quiz</item>
        <item>Prerequisite</item>
        <item>Midterm</item>
        <item>Final</item>
    </string-array>

    <string-array name="test_type_reports">
        <item>View All</item>
        <item>Quiz</item>
        <item>Prerequisite</item>
        <item>Midterm</item>
        <item>Final</item>
    </string-array>


</resources>