<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_baseline_share_24"
        android:visible="false"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/edit"
        android:title="@string/edit"
        android:icon="@drawable/ic_baseline_edit_24"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        app:showAsAction="always">
    </item>

    <item
        android:id="@+id/AllTerms"
        android:title="@string/all_terms"
        app:showAsAction="never"/>

    <item
        android:id="@+id/AllCourses"
        android:title="@string/all_courses"
        app:showAsAction="never"/>

    <item
        android:id="@+id/AllAssessments"
        android:title="@string/all_assessments"
        app:showAsAction="never"/>

</menu>