<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTextDateTest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.NewTerm">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


<!--            <com.google.android.material.textfield.TextInputLayout-->
<!--                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="60dp"-->
<!--                android:layout_marginStart="32dp"-->
<!--                android:layout_marginTop="16dp"-->
<!--                android:layout_marginEnd="32dp"-->
<!--                android:hint="@string/term_title"-->
<!--                app:errorEnabled="true">-->

<!--                <EditText-->
<!--                    android:id="@+id/editTextTermTitle"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="match_parent"-->
<!--                    tools:ignore="SpeakableTextPresentCheck" />-->
<!--            </com.google.android.material.textfield.TextInputLayout>-->

            <EditText
                android:id="@+id/editTextTermTitle"
                style="@style/form_style"
                android:layout_width="match_parent"
                android:hint="@string/term_title"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextStartDate"
                style="@style/form_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/start_date"
                android:inputType="date"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/editTextEndDate"
                style="@style/form_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:focusable="false"
                android:hint="@string/end_date"
                android:inputType="date"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/createTermButton"
                style="@style/form_style"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:text="@string/create_term" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>